# PMFStableMarriage

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pmfstablemarriage/: marriages.py
