[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmfstablemarriage"
version = "1.0.0"
authors = [
	{ name = "Mahir Salihbasic", email = "mahir.salihbasic@protonmail.com" }
]
description = "A package implementing the workings of Gale-Shapley algorithm."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3"
	"License :: OSI Approved :: MIT License"
	"Operating System :: OS Independent"
]